{
    "version": 1,
    "name": "InputAction",
    "maps": [
        {
            "name": "Mobile",
            "id": "5a2a502f-9560-4167-97cf-2e84f847ae23",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "b6ff118f-3f44-487b-b536-d0c1bf66b419",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "470c428c-81fb-4ae7-b068-b4d2e0110158",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}